io-hotmoka-examples/src/main/java/io/hotmoka/examples/errors/illegalexceptionhandler6/MyUncheckedException.java
package io.hotmoka.examples.errors.illegalexceptionhandler6;

public class MyUncheckedException extends RuntimeException {
	private static final long serialVersionUID = 1L;
}